update: Add Splash

--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -93,6 +93,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PageView\SplashPage.xaml.cs">
+      <DependentUpon>SplashPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PlatformCore\Director.cs" />
     <Compile Include="PlatformCore\Graphic3D\ParticleDescriptor3D.cs" />
     <Compile Include="PlatformCore\Graphic3D\ParticleEmitter3D.cs" />
@@ -139,6 +142,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="PageView\SLPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageView\SplashPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
