--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -60,6 +60,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\EditDialogCommand.cs" />
+    <Compile Include="Command\HalationSingleEditCommand.cs" />
     <Compile Include="Command\IfCommand.cs" />
     <Compile Include="Command\SCameraCommand.cs" />
     <Compile Include="Command\VarCommand.cs" />
@@ -98,7 +100,7 @@
     <Compile Include="Command\HalationInvoker.cs" />
     <Compile Include="Command\HalationViewCommand.cs" />
     <Compile Include="Command\IHalationCommand.cs" />
-    <Compile Include="Command\IHalationSingleCommand.cs" />
+    <Compile Include="Command\HalationSingleCommand.cs" />
     <Compile Include="Command\MsgLayerCommand.cs" />
     <Compile Include="Command\MsgLayerOptCommand.cs" />
     <Compile Include="Command\StopBGSCommand.cs" />
