If、Var、Bg command is editable in Halation

--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\EditBgCommand.cs" />
     <Compile Include="Command\EditDeletestandCommand.cs" />
     <Compile Include="Command\EditDeletepicCommand.cs" />
     <Compile Include="Command\EditDeletebuttonCommand.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Command\EditACommand.cs" />
     <Compile Include="Command\EditDialogCommand.cs" />
     <Compile Include="Command\HalationSingleEditCommand.cs" />
+    <Compile Include="Command\EditIfCommand.cs" />
     <Compile Include="Command\IfCommand.cs" />
     <Compile Include="Command\EditNotationCommand.cs" />
     <Compile Include="Command\EditPictureCommand.cs" />
@@ -76,6 +78,7 @@
     <Compile Include="Command\EditSCameraCommand.cs" />
     <Compile Include="Command\SCameraCommand.cs" />
     <Compile Include="Command\EditScriptCommand.cs" />
+    <Compile Include="Command\EditVarCommand.cs" />
     <Compile Include="Command\VarCommand.cs" />
     <Compile Include="Command\FuncallCommand.cs" />
     <Compile Include="Command\MenuPasteCommand.cs" />
