--- a/Lyyneheym/SlyviaInterpreter/YuriInterpreter.csproj
+++ b/Lyyneheym/SlyviaInterpreter/YuriInterpreter.csproj
@@ -32,12 +32,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="YuriILEnum\PolishItemType.cs" />
+    <Compile Include="YuriILEnum\InterpreterPhase.cs" />
+    <Compile Include="YuriILEnum\CFunctionType.cs" />
+    <Compile Include="YuriILEnum\InterpreterType.cs" />
+    <Compile Include="YuriILEnum\SyntaxType.cs" />
+    <Compile Include="YuriILEnum\VarScopeType.cs" />
+    <Compile Include="YuriILEnum\TokenType.cs" />
     <Compile Include="YuriEncryptor.cs" />
     <Compile Include="Interpreter.cs" />
     <Compile Include="InterpreterException.cs" />
