--- a/Lyyneheym/Yuriri/Yuriri.csproj
+++ b/Lyyneheym/Yuriri/Yuriri.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RunnableYuriri.cs" />
     <Compile Include="SActionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scene.cs" />
