--- a/Lyyneheym/Hemerocallis/Hemerocallis.csproj
+++ b/Lyyneheym/Hemerocallis/Hemerocallis.csproj
@@ -60,6 +60,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UISupport\DesignerItemDecorator.cs" />
+    <Compile Include="UISupport\MoveThumb.cs" />
+    <Compile Include="UISupport\ResizeRotateAdorner.cs" />
+    <Compile Include="UISupport\ResizeRotateChrome.cs" />
+    <Compile Include="UISupport\ResizeThumb.cs" />
+    <Compile Include="UISupport\RotateThumb.cs" />
+    <Compile Include="UISupport\SizeAdorner.cs" />
+    <Compile Include="UISupport\SizeChrome.cs" />
     <Compile Include="Entity\HBook.cs" />
     <Compile Include="Utils\IOUtil.cs" />
     <Page Include="Forms\AboutWindow.xaml">
@@ -95,6 +103,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\DesignerItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\ResizeRotateChrome.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\SizeChrome.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
