--- a/Lyyneheym/Hemerocallis/Hemerocallis.csproj
+++ b/Lyyneheym/Hemerocallis/Hemerocallis.csproj
@@ -60,8 +60,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Forms\IndexPage.xaml.cs">
+      <DependentUpon>IndexPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Forms\NewBookWindow.xaml.cs">
       <DependentUpon>NewBookWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RTBPage.xaml.cs">
+      <DependentUpon>RTBPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UISupport\DesignerItemDecorator.cs" />
     <Compile Include="UISupport\MoveThumb.cs" />
@@ -78,6 +84,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Forms\AppearanceWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\IndexPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -107,6 +117,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Forms\NewBookWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\RTBPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -167,6 +181,14 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\logo_hemerocallis.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\bg_Index.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\HemerocallisLable.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
