update: 1. 并行处理和信号系统支持快启动机制了；2. 并行处理和信号系统支持用户等待和系统中断了；3. 增加从脚本开启或禁止指定功能的语法；4. 可以检索信号量上绑定的处理机数量了；5. 增加窗体关闭preview信号量

--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -106,7 +106,7 @@
     <Compile Include="PlatformCore\Graphic3D\ParticleDescriptor3D.cs" />
     <Compile Include="PlatformCore\Graphic3D\ParticleEmitter3D.cs" />
     <Compile Include="PlatformCore\Graphic3D\ParticleSystem3D.cs" />
-    <Compile Include="PlatformCore\Graphic\ModelDescriptor3D.cs" />
+    <Compile Include="PlatformCore\Graphic3D\ModelDescriptor3D.cs" />
     <Compile Include="PlatformCore\Semaphore\SemaphoreDispatcher.cs" />
     <Compile Include="PlatformCore\Semaphore\SemaphoreHandler.cs" />
     <Compile Include="PlatformCore\Semaphore\YuriObservable.cs" />
